tests/test_files/invalid/semantic/import_module_file_not_found.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Import invalid_path.module

Task mainTask
    Test
End
